`StatusInfo` --> `JobInfo`
