# s2gos/common/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2025-06-22T13:12:26+00:00
+#   timestamp: 2025-06-22T13:18:35+00:00
 
 from __future__ import annotations
 
@@ -145,7 +145,7 @@ class LandingPage(BaseModel):
     links: list[Link]
 
 
-class StatusInfo(BaseModel):
+class JobInfo(BaseModel):
     processID: Optional[str] = None
     type: Type
     jobID: str
@@ -223,7 +223,7 @@ class QualifiedInputValue(Format):
 
 
 class JobList(BaseModel):
-    jobs: list[StatusInfo]
+    jobs: list[JobInfo]
     links: list[Link]
 
 
