# s2gos/server/service.py
@@ -1,6 +1,6 @@
 # generated by gen_server.py:
-#   filename:  transport.py:
-#   timestamp: 2025-06-08T20:15:02.580419
+#   filename:  service.py:
+#   timestamp: 2025-06-22T15:29:08.533597
 
 from abc import ABC, abstractmethod
 
@@ -9,18 +9,18 @@ from fastapi.responses import JSONResponse
 from s2gos.common.models import (
     ConfClasses,
     Execute,
+    JobInfo,
     JobList,
     LandingPage,
     Process,
     ProcessList,
     Results,
-    StatusInfo,
 )
 
 
 class Service(ABC):
     @abstractmethod
-    async def get_landing_page(self) -> LandingPage | JSONResponse:
+    async def get_landing_page(self) -> JSONResponse | LandingPage:
         pass
 
     @abstractmethod
@@ -28,31 +28,31 @@ class Service(ABC):
         pass
 
     @abstractmethod
-    async def get_processes(self) -> ProcessList | JSONResponse:
+    async def get_processes(self) -> JSONResponse | ProcessList:
         pass
 
     @abstractmethod
-    async def get_process_description(self, process_id: str) -> Process | JSONResponse:
-        pass
-
-    @abstractmethod
-    async def get_jobs(self) -> JobList | JSONResponse:
+    async def get_process_description(self, process_id: str) -> JSONResponse | Process:
         pass
 
     @abstractmethod
     async def execute(
         self, process_id: str, request: Execute
-    ) -> StatusInfo | JSONResponse:
+    ) -> JSONResponse | JobInfo:
         pass
 
     @abstractmethod
-    async def get_status(self, job_id: str) -> StatusInfo | JSONResponse:
+    async def get_jobs(self) -> JSONResponse | JobList:
         pass
 
     @abstractmethod
-    async def dismiss(self, job_id: str) -> StatusInfo | JSONResponse:
+    async def get_status(self, job_id: str) -> JSONResponse | JobInfo:
         pass
 
     @abstractmethod
-    async def get_result(self, job_id: str) -> Results | JSONResponse:
+    async def dismiss(self, job_id: str) -> JSONResponse | JobInfo:
+        pass
+
+    @abstractmethod
+    async def get_result(self, job_id: str) -> JSONResponse | Results:
         pass
